--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.img {
+  height: 48rem;
+  width: 10rem;
+}
+
+.gay{
+  height: 70rem;
+}
